import("//adrbrowsiel/build/config.gni")
import("//adrbrowsiel/components/adrbrowsiel_ads/browser/buildflags/buildflags.gni")

source_set("adrbrowsiel_ads") {
  # Remove when https://github.com/adrbrowsiel/adrbrowsiel-browser/issues/10639 is resolved
  check_includes = false

  sources = [
    "ads_service_factory.cc",
    "ads_service_factory.h",
    "ads_tab_helper.cc",
    "ads_tab_helper.h",
  ]

  deps = [
    "//base",
    "//adrbrowsiel/browser/profiles:util",
    "//adrbrowsiel/components/adrbrowsiel_ads/browser",
    "//adrbrowsiel/components/adrbrowsiel_ads/browser/buildflags",
    "//components/dom_distiller/content/browser",
    "//components/keyed_service/content",
    "//components/sessions",
    "//content/public/browser",
    "//ui/base",
  ]
}
