# Copyright (c) 2020 The adrbrowsiel Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.
#

import("//adrbrowsiel/components/adrbrowsiel_wallet/common/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

adrbrowsiel_browser_wallet_sources = []

adrbrowsiel_browser_wallet_deps = []

if (adrbrowsiel_wallet_enabled) {
  adrbrowsiel_browser_wallet_sources += [
    "//adrbrowsiel/browser/adrbrowsiel_wallet/adrbrowsiel_wallet_context_utils.cc",
    "//adrbrowsiel/browser/adrbrowsiel_wallet/adrbrowsiel_wallet_context_utils.h",
    "//adrbrowsiel/browser/adrbrowsiel_wallet/adrbrowsiel_wallet_service_factory.cc",
    "//adrbrowsiel/browser/adrbrowsiel_wallet/adrbrowsiel_wallet_service_factory.h",
  ]

  adrbrowsiel_browser_wallet_deps += [ "//components/keyed_service/content:content" ]

  if (enable_extensions) {
    adrbrowsiel_browser_wallet_deps += [ "//extensions/browser" ]
  }
}
