# Copyright (c) 2021 The adrbrowsiel Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//adrbrowsiel/components/adrbrowsiel_webtorrent/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/ipfs/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

adrbrowsiel_browser_autocomplete_sources = [
  "//adrbrowsiel/browser/autocomplete/adrbrowsiel_autocomplete_scheme_classifier.cc",
  "//adrbrowsiel/browser/autocomplete/adrbrowsiel_autocomplete_scheme_classifier.h",
]

adrbrowsiel_browser_autocomplete_deps = [
  "//base",
  "//adrbrowsiel/common",
  "//adrbrowsiel/components/adrbrowsiel_webtorrent/browser/buildflags",
  "//adrbrowsiel/components/ipfs/buildflags",
  "//chrome/browser/profiles:profile",
]

if (enable_extensions && enable_adrbrowsiel_webtorrent) {
  adrbrowsiel_browser_autocomplete_deps +=
      [ "//adrbrowsiel/components/adrbrowsiel_webtorrent/browser" ]
}

if (ipfs_enabled) {
  adrbrowsiel_browser_autocomplete_deps += [ "//adrbrowsiel/components/ipfs" ]
}
