# Copyright (c) 2021 The adrbrowsiel Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//adrbrowsiel/components/binance/browser/buildflags/buildflags.gni")

adrbrowsiel_browser_binance_sources = []
adrbrowsiel_browser_binance_deps = []

if (binance_enabled) {
  adrbrowsiel_browser_binance_sources += [
    "//adrbrowsiel/browser/binance/binance_protocol_handler.cc",
    "//adrbrowsiel/browser/binance/binance_protocol_handler.h",
    "//adrbrowsiel/browser/binance/binance_service_factory.cc",
    "//adrbrowsiel/browser/binance/binance_service_factory.h",
  ]

  adrbrowsiel_browser_binance_deps += [
    "//base",
    "//adrbrowsiel/common",
    "//adrbrowsiel/components/binance/browser",
    "//chrome/browser/profiles:profile",
    "//components/country_codes",
    "//components/keyed_service/content",
    "//components/user_prefs",
    "//content/public/browser",
    "//net",
  ]

  if (is_android) {
    adrbrowsiel_browser_binance_sources += [
      "//adrbrowsiel/browser/binance/android/binance_native_worker.cc",
      "//adrbrowsiel/browser/binance/android/binance_native_worker.h",
    ]
  }
}
