# Copyright (c) 2021 The adrbrowsiel Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import(
    "//adrbrowsiel/components/adrbrowsiel_perf_predictor/browser/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

adrbrowsiel_browser_adrbrowsiel_shields_sources = [
  "//adrbrowsiel/browser/adrbrowsiel_shields/ad_block_pref_service_factory.cc",
  "//adrbrowsiel/browser/adrbrowsiel_shields/ad_block_pref_service_factory.h",
  "//adrbrowsiel/browser/adrbrowsiel_shields/adrbrowsiel_shields_web_contents_observer.cc",
  "//adrbrowsiel/browser/adrbrowsiel_shields/adrbrowsiel_shields_web_contents_observer.h",
  "//adrbrowsiel/browser/adrbrowsiel_shields/cookie_pref_service_factory.cc",
  "//adrbrowsiel/browser/adrbrowsiel_shields/cookie_pref_service_factory.h",
]

adrbrowsiel_browser_adrbrowsiel_shields_deps = [
  "//base",
  "//adrbrowsiel/browser:browser_process",
  "//adrbrowsiel/common",
  "//adrbrowsiel/components/adrbrowsiel_shields/browser",
  "//adrbrowsiel/components/adrbrowsiel_shields/common",
  "//chrome/browser/profiles:profile",
  "//chrome/common",
  "//components/content_settings/core/browser",
  "//components/content_settings/core/common",
  "//components/keyed_service/content",
  "//components/prefs",
  "//content/public/browser",
  "//extensions/buildflags",
  "//ipc",
  "//mojo/public/cpp/bindings",
]

if (is_android) {
  adrbrowsiel_browser_adrbrowsiel_shields_sources += [ "//adrbrowsiel/browser/adrbrowsiel_shields/adrbrowsiel_shields_web_contents_observer_android.cc" ]
  adrbrowsiel_browser_adrbrowsiel_shields_deps +=
      [ "//adrbrowsiel/browser/android:android_browser_process" ]
}

if (enable_extensions) {
  adrbrowsiel_browser_adrbrowsiel_shields_deps += [
    "//adrbrowsiel/common/extensions/api",
    "//chrome/browser/extensions",
    "//extensions/browser",
  ]
}

if (enable_adrbrowsiel_perf_predictor) {
  adrbrowsiel_browser_adrbrowsiel_shields_deps +=
      [ "//adrbrowsiel/components/adrbrowsiel_perf_predictor/browser" ]
}
