import("//adrbrowsiel/components/adrbrowsiel_referrals/buildflags/buildflags.gni")

declare_args() {
  adrbrowsiel_stats_updater_url = ""
}

if (is_official_build) {
  assert(adrbrowsiel_stats_updater_url != "")
}

source_set("stats_updater") {
  # Remove when https://github.com/adrbrowsiel/adrbrowsiel-browser/issues/10657 is resolved
  check_includes = false
  defines = [ "adrbrowsiel_USAGE_SERVER=\"$adrbrowsiel_stats_updater_url\"" ]

  sources = [
    "adrbrowsiel_stats_tab_helper.cc",
    "adrbrowsiel_stats_tab_helper.h",
    "adrbrowsiel_stats_updater.cc",
    "adrbrowsiel_stats_updater.h",
    "adrbrowsiel_stats_updater_params.cc",
    "adrbrowsiel_stats_updater_params.h",
    "switches.h",
  ]

  deps = [
    "//base",
    "//adrbrowsiel/common",
    "//adrbrowsiel/common:pref_names",
    "//adrbrowsiel/components/adrbrowsiel_referrals/buildflags",
    "//adrbrowsiel/components/adrbrowsiel_stats/browser",
    "//adrbrowsiel/components/rpill/common",
    "//adrbrowsiel/components/version_info",
    "//adrbrowsiel/vendor/bat-native-ads",
    "//chrome/common",
    "//components/prefs",
    "//content/public/browser",
    "//net",
    "//services/network/public/cpp",
    "//ui/base",
  ]

  if (enable_adrbrowsiel_referrals) {
    deps += [ "//adrbrowsiel/components/adrbrowsiel_referrals/common" ]
  }
}
