import("//adrbrowsiel/components/adrbrowsiel_wallet/common/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

assert(adrbrowsiel_wallet_enabled)

source_set("adrbrowsiel_wallet") {
  sources = [
    "adrbrowsiel_wallet_delegate_impl.cc",
    "adrbrowsiel_wallet_delegate_impl.h",
  ]
  deps = [
    "//adrbrowsiel/components/adrbrowsiel_wallet/browser",
    "//adrbrowsiel/components/adrbrowsiel_wallet/common",
    "//content/public/browser",
    "//extensions/buildflags",
  ]
  if (enable_extensions) {
    deps += [
      "//adrbrowsiel/browser/extensions",
      "//chrome/browser/extensions:extensions",
      "//extensions/browser",
    ]
  }
}
