# Copyright (c) 2021 The adrbrowsiel Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

adrbrowsiel_browser_component_updater_sources = [
  "//adrbrowsiel/browser/component_updater/adrbrowsiel_component_installer.cc",
  "//adrbrowsiel/browser/component_updater/adrbrowsiel_component_installer.h",
  "//adrbrowsiel/browser/component_updater/adrbrowsiel_component_updater_configurator.cc",
  "//adrbrowsiel/browser/component_updater/adrbrowsiel_component_updater_configurator.h",
  "//adrbrowsiel/browser/component_updater/adrbrowsiel_component_updater_delegate.cc",
  "//adrbrowsiel/browser/component_updater/adrbrowsiel_component_updater_delegate.h",
]

adrbrowsiel_browser_component_updater_deps = [
  "//base",
  "//adrbrowsiel/common:switches",
  "//adrbrowsiel/components/adrbrowsiel_component_updater/browser",
  "//chrome/browser:browser_process",
  "//chrome/common:constants",
  "//components/component_updater",
  "//components/crx_file",
  "//components/prefs",
  "//components/services/patch/content",
  "//components/services/unzip/content",
  "//components/update_client",
  "//components/update_client:network_impl",
  "//components/update_client:patch_impl",
  "//components/update_client:unzip_impl",
  "//content/public/browser",
  "//crypto",
  "//services/network/public/cpp",
]
