# Copyright (c) 2020 The adrbrowsiel Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

source_set("content_settings") {
  sources = [
    "adrbrowsiel_global_value_map.cc",
    "adrbrowsiel_global_value_map.h",
  ]

  deps = [
    "//base",
    "//adrbrowsiel/components/content_settings/core/browser",
    "//components/content_settings/core/browser",
    "//components/content_settings/core/common",
  ]
}

source_set("unit_tests") {
  testonly = true

  sources = [ "adrbrowsiel_content_settings_default_provider_unittest.cc" ]

  deps = [
    "//base/test:test_support",
    "//adrbrowsiel/components/content_settings/core/browser",
    "//chrome/test:test_support",
    "//components/content_settings/core/browser",
    "//components/prefs",
    "//content/test:test_support",
  ]
}
