# Copyright (c) 2021 The adrbrowsiel Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//adrbrowsiel/components/crypto_dot_com/browser/buildflags/buildflags.gni")

adrbrowsiel_browser_crypto_dot_com_sources = []
adrbrowsiel_browser_crypto_dot_com_deps = []

if (crypto_dot_com_enabled) {
  adrbrowsiel_browser_crypto_dot_com_sources += [
    "//adrbrowsiel/browser/crypto_dot_com/crypto_dot_com_service_factory.cc",
    "//adrbrowsiel/browser/crypto_dot_com/crypto_dot_com_service_factory.h",
  ]

  adrbrowsiel_browser_crypto_dot_com_deps += [
    "//base",
    "//adrbrowsiel/browser/profiles",
    "//adrbrowsiel/components/crypto_dot_com/browser",
    "//adrbrowsiel/components/crypto_dot_com/common",
    "//chrome/browser/profiles:profile",
    "//components/keyed_service/content",
  ]
}
